updated at: 2023-04-25 22:55, チョコレート・スイート　(VRChat想定モデル) - リノールのどうぶつ雑貨店 - BOOTH

--- a/VRChat/21/1263321.html
+++ b/VRChat/21/1263321.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "BBaWr/D9V4th1UroOngGLJrqRhmtWf3KQbx5H64wJ/k="></script>
+    "mgrIVEf0ngWx5qBUpmNQA3rEooA3hIdjraLd1IkxHZ8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"チョコレート・スイート　(VRChat想定モデル)","description":"VRChatの大事なフレンドに甘いチョコレートを渡そう！\n\nバレンタイン、ホワイトデー、誕生日会、あるいはサプライズプレゼントにどうぞ！","url":"https://booth.pm/ja/items/1263321","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/860474d4-d153-4e66-a594-a4e3e5e77c4e/i/1263321/3ea65372-828b-4ef3-bdec-532489de96f2_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="BBaWr/D9V4th1UroOngGLJrqRhmtWf3KQbx5H64wJ/k="></script>
+    nonce="mgrIVEf0ngWx5qBUpmNQA3rEooA3hIdjraLd1IkxHZ8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -141,6 +141,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -184,7 +186,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1263321/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               22
@@ -199,14 +201,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1263321/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               22
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
