updated at: 2023-04-25 22:55, [眼鏡]アンダーリム眼鏡(ツートン) - Sharono屋 - BOOTH

--- a/VRChat/98/1263198.html
+++ b/VRChat/98/1263198.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "NCkBiCA5q/BVhPXNjYli+/utPXFwAOsbB4njWUCImZo="></script>
+    "J1CnSc3ykcuqabZwiJfcrIbMZGFxpAQlm8Rs2As4mT0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[眼鏡]アンダーリム眼鏡(ツートン)","description":"アンダーリムの眼鏡です。\nちょっと武骨。\nVket3展示品。\n\n仕様\n　作者：@Sharono_vvv\n　ファイル形式：unitypackage + fbx + png\n　ポリゴン数：1920\n　その他：ボーンあり(つる左右)\n　テクスチャ：あり(全10色)\n　シェーダー：UTS2　(事前にインストール願います)\n\n　※マテリアル版は色1と色2で別マテリアルになっています。\n\n使い方\n　事前に以下をインポート\n　・UTS2.0.x\n　prefabフォルダ内のunder4_xxx.prefabをHierarchyにドロップ\n\n利用にあたって(利用規約)\n\n　〇：商用、非商用問わずご利用ください。\n　〇：改造、別モデルへのパーツ組み込み等はご自由に。\n　×：ただし、販売モデルそのままの状態での転売や他者への配布は禁止とします。\n　不明点ございましたらお問い合わせください。\n\n","url":"https://booth.pm/ja/items/1263198","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/d84d54f0-8809-4972-baee-3f190b4e9fd3/i/1263198/e0a4f5bc-dc00-4fb7-bdc4-23c15adc8653_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="NCkBiCA5q/BVhPXNjYli+/utPXFwAOsbB4njWUCImZo="></script>
+    nonce="J1CnSc3ykcuqabZwiJfcrIbMZGFxpAQlm8Rs2As4mT0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1263198/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               24
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1263198/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               24
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
