--- a/VRChat/17/1263017.html
+++ b/VRChat/17/1263017.html
@@ -98,9 +98,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "emRMd3yO4UM3NAB8Z5PP5rMaQwNhAPX8sHa26qmo9VA="></script>
+    "s+xtnL//+EhOEdf9icj0Y+m/y+7BFZkY3sHVJ/3A9r8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"JazzBass","description":"全力で作りました。ジャズベースです。\n△28159\n内容物\nJazzBass.fbx\n4つのprefab、及びそれぞれに対応したマテリアル\ntextureとBody、pickguardのUVmap\n\n利用規約\n・再配布、及び改変しての再配布は禁止です。(5/1変更)\n・使用用途は制限を設けません。\n\n","url":"https://booth.pm/ja/items/1263017","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/3e5d3959-13e0-495e-b172-ec5a9e33d076/i/1263017/c74492d6-72d1-4187-9a86-bd18bd95a778_base_resized.jpg"}
     </script>
@@ -111,7 +111,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="emRMd3yO4UM3NAB8Z5PP5rMaQwNhAPX8sHa26qmo9VA="></script>
+    nonce="s+xtnL//+EhOEdf9icj0Y+m/y+7BFZkY3sHVJ/3A9r8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -139,6 +139,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -182,7 +184,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1263017/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               138
@@ -197,14 +199,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1263017/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               138
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
