--- a/VRChat/54/1262854.html
+++ b/VRChat/54/1262854.html
@@ -71,9 +71,6 @@
     <script id="shoplist_with_items" type="text/x-template">
     <div><div class="l-cards-4cols l-cards-sp-2cols"><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" v-for="shop in visibleShops"></shop-with-items><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" closed="" v-for="shop in moreShops" v-if="moreShops &amp;&amp; moreShopsVisible"></shop-with-items></div><div @click="moreShopsVisible = true" class="ellip-btn" v-if="moreShops &amp;&amp; !moreShopsVisible">もっと見る<i class="icon-arrow-open-down s-2x no-margin"></i></div></div>
     </script>
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <div class="mini-player-controller" style="display: none;">
@@ -103,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "LOfjusc7RpTanAvvliXjJsP9DvtVto5sRc+iEZfJhMw="></script>
+    "fV7aUDF06pVZqWYRgCqYRiAkFtniZ6Iw/vC0RAcRdvI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け3Dモデル  バグパイプ \u0026 電子バグパイプセット","description":"スコットランドなどで有名な民族楽器「バグパイプ」と「電子バグパイプ」の3Dモデルセットです。\n\nVRChat等のアプリケーション、ゲーム、動画配信等にご利用いただけます。\n\n営利目的・商用目的の利用可能でございます。\nクレジット記載や利用報告不要です。\n利用規約の範囲内でご自由にお使いくださいませ。\n\n※残念ながら音は出ません。アクセサリとしてご活用ください。\n※チャンター(メロディ管)の指孔は省略しています。\n※綿雪花菜卯アバター本体は付属しません。","url":"https://booth.pm/ja/items/1262854","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/0737dad0-be54-4bbc-ab35-66d3ee8a4d37/i/1262854/c934798e-12c3-4302-82a8-be38ab372fa3_base_resized.jpg"}
     </script>
@@ -116,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="LOfjusc7RpTanAvvliXjJsP9DvtVto5sRc+iEZfJhMw="></script>
+    nonce="fV7aUDF06pVZqWYRgCqYRiAkFtniZ6Iw/vC0RAcRdvI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -140,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -154,7 +153,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -196,7 +196,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1262854/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               54
@@ -211,14 +211,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1262854/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               54
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
