--- a/VRChat/41/1178641.html
+++ b/VRChat/41/1178641.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "idlSnw5qJAVY9QKPU4vMO1b0qGeZvZy1nvvwdjFSt/U="></script>
+    "vC9MsK2BmdIjZRTf5k0TwnkPktpw/AXYn0WtwyiNAS8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRアバター向け3Dモデル【ラドドール】","description":"VRアバター向けオリジナル３Dモデル【ラドドール】\n\n〇おまけで253ポリのRadDollちゃんがついてきます\n\n〇注意：正常に動作させるにはUnityアセットのDynamicBoneが必要です。\nVRChatのAvater2.0で設定されたモデルです、Avater3.0のSDKを使う場合ご自身で設定する必要があります。\n\nUnityのHumanoid形式対応のオリジナル３Dモデルです。無料で利用することが出来ます。\n\nVRChat向けにセットアップされており、ダウンロード後すぐにアップロードできます！\nセットアップは自力で行う必要がありますが、VRChat以外での使用も可能です！\nVRMファイルを同封してるのでVWorld等で使用できます。\n\n\n商用利用及び、改変しての利用、見た目を改変したモデル（色香えやパーツの差し替え、パーツ流用）のペデスタル設置が可能です。\n\n〇データ内容\n・モデルデータ（fbx）\n・テクスチャデータ（png,psd）\n・アニメーションファイル\n・Unityパッケージファイル\n・利用規約,導入手順書（日本語、English）\n・ReflexShader2.1.1\n・VRMファイル\n\n〇禁止事項\n・改変の有無にかかわらず、フォルダ内モデルデータの販売は禁止です。\n・政治的及び宗教的用途、特定の個人や団体への中傷を目的とした利用は禁止です。\n\n以下利用規約\n\n\n\n〇注意事項\n・本データはVRChat向けに作られたモデルデータです。VRChat以外での動作は保障しかねます。\n・フルトラッキングでの簡易的なテストは行っておりますが、正式に対応はしておりません。あらかじめご了承ください。\n・本データを用いたことでのあらゆる損害、損失、その他不利益に対して製作者　まおー　は一切の責任を負いません。\n\n〇禁止事項\n・改変の有無にかかわらず、フォルダ内モデルデータの販売は禁止です。\n・政治的及び宗教的用途、特定の個人や団体への中傷を目的とした利用は禁止です。\n\n〇再配布\n・アバターの改変を行なえば、このアバターをVRChat内のペデスタルに設置することが出来ます。\n・権利者を偽って無断で再配布することを禁止します。\n・本データを利用したものを配布する際には連絡をお願いします。\n\n〇商用利用\n・このアバターを利用した商用利用が可能です。\n・ゲーム制作、アニメーション制作などVRChat外での利用も可能です。\n\n〇性的表現、暴力的表現について\n・上記の禁止事項に違反しない場合特に規制はありません。\n\n〇改造について\n・特に規制はありません。上記の禁止事項に違反しない範囲で自由に改造できます。\n\n〇対応バージョン\n・Unity2017.4.15f1での動作を確認しています。\n\n〇著作権\n・『RadDoll』とそれに関連したデータの改造および個人的利用範囲での流用は自由ですが、\n　この配布データ『RadDoll』及び改変したデータとキャラクターの著作権は、\n　大元の製作者である　まおー　に帰属するものとします。\n\n\n\n","url":"https://booth.pm/ja/items/1178641","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/3c39b721-63d9-4193-a883-507b13ff6ebc/i/1178641/bfba514e-ec07-4b1d-9e17-34f46257143c_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="idlSnw5qJAVY9QKPU4vMO1b0qGeZvZy1nvvwdjFSt/U="></script>
+    nonce="vC9MsK2BmdIjZRTf5k0TwnkPktpw/AXYn0WtwyiNAS8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,10 +173,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1178641/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              1624
+                              1626
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1178641/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              1624
+                              1626
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
