--- a/VRChat/45/1263045.html
+++ b/VRChat/45/1263045.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "UVmCTk7oHTJxUj4OVZsHzmxVPQJmRiR9hDioSVERh2k="></script>
+    "vmIIItkQXC4Zt1+D70uejuD2bB7YTrknBZCzpSKLpyA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ZX_HIHIIROKANE","description":"名前はSFですが、がっつりファンタジーな短剣です。\nUTS2.0.5でシェーダーを設定していますので、UTS2.0.6環境に上げるとちょっと変になると思います。\nその辺は自分で調整してください。\n主にマットキャップ周りが大変だと思います。\n\n\n画像に使用させていただいたモデルはこちら。\n\n【オリジナル3Dモデル　「GOU」】\naburage Factory ＜https://booth.pm/ja/items/1162343＞\n\n\n※利用規約※\n\n営利利用:可\n【ゲーム, 映像作品, 動画配信等にご利用いただけます】\n\n改変:可\n【モデルを含めた当データの改変は自由です】\n\n再配布:禁止\n【テクスチャ、モデルともに他者への二次配布を禁止します】","url":"https://booth.pm/ja/items/1263045","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/370bd2d8-e720-4d70-a153-03e2d3872e42/i/1263045/42014eb1-c1d6-43f8-9383-57ca79debb55_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="UVmCTk7oHTJxUj4OVZsHzmxVPQJmRiR9hDioSVERh2k="></script>
+    nonce="vmIIItkQXC4Zt1+D70uejuD2bB7YTrknBZCzpSKLpyA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,7 +182,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1263045/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               39
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1263045/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               39
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
