--- a/VRChat/08/1263008.html
+++ b/VRChat/08/1263008.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "qlB9zmnJdkQ3i3sCBomN88WUcnM2vRbI2wc+ruM0JpU="></script>
+    "H7KsxjqkAOjKrSWppYHFCg3r9XmoOEgF3ynyWSySctc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"アイススパイクの書","description":"バーチャルマーケット2\nスペース 異世界マルシェ B中央区17\n\n\n【アイススパイクの書】\n\n魔法が放てる本です。\n本・本をめくるアニメーション・氷パーティクル・氷シェーダがセットで同梱されています。\n\nVケット2の会場、異世界マルシェB中央区にてお試し装備ができます。\nvket-catalog.appspot.com/?world=10 \n\nお値段を付けた商品ですが、プレゼント等には自由に再配布して構いません。\n\nVRChatでの使用を想定しています。\nただし、使用に制限があるわけではありません。\n\n----------------------\n【そのた】\n改変、商用利用、アバターやワールドへの同梱などなど大丈夫です。\n再配布については、誰でもダウンロードできる場所に公開さえしなければ自由にしてもらって構いません。","url":"https://booth.pm/ja/items/1263008","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/8eae0ce3-7d8e-4436-9710-ea35a9636d4c/i/1263008/1fdd4b20-652f-410e-8467-62f798a9c7e3_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="qlB9zmnJdkQ3i3sCBomN88WUcnM2vRbI2wc+ruM0JpU="></script>
+    nonce="H7KsxjqkAOjKrSWppYHFCg3r9XmoOEgF3ynyWSySctc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1263008/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               298
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1263008/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               298
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
