updated at: 2023-04-25 22:56, オリジナル3Dモデル【藍ぐるみ】ver1.01 - 寒極雪 - BOOTH

--- a/VRChat/28/1262528.html
+++ b/VRChat/28/1262528.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "auSuDaiJh7s3JvSWjaelwDVOJ7I/5sS6H6OdhISHtkM="></script>
+    "/RfHyFYkhbGm3PmSRSKdIZ/1F5VLxBc7imx8Nm/Sgyo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル【藍ぐるみ】ver1.01","description":"オリジナル3Dモデル【藍ちゃん】(https://fooyuta.booth.pm/items/1000353)のぬいぐるみバージョンです。\nヒューマノイドボーンが入っており、他の3Dモデル同様動かすことができます。\nぬいぐるみなのでポーズを取らせて、お部屋に置いたりもいいかもしれません。\n\n内容物\n・3Dモデル(fbx,blend)\n・テクスチャ\n・unitypackage\n\nテクスチャ改変をするときは表情フォルダ内のテクスチャの色も変更してください。\n\n●利用規約●\n・当モデルを使い、他人を不快にさせる行為を禁止します。\n・有償での再配布行為を禁止します。\n・公序良俗に反する行為や目的、政治・宗教活動、他者に対する誹謗中傷目的での使用を禁止します。\n・本モデルデータを使用することによって発生したトラブルや金銭的損失及び損害が発生した場合でも\n当方は一切の責任を負わないものとします。\n\n\n2019/03/06 ver1.00　リリース\n2019/03/07 ver1.01　UnityChanToonShaderVer2 with EmissiveScrollが同梱されてしまっていたのを削除しました。","url":"https://booth.pm/ja/items/1262528","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"0"},"image":"https://booth.pximg.net/c/620x620/7cfbd5d9-0c51-46c5-9713-7626f9f61dea/i/1262528/9df54760-e6b1-4026-aa1e-5af339a3a0d2_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="auSuDaiJh7s3JvSWjaelwDVOJ7I/5sS6H6OdhISHtkM="></script>
+    nonce="/RfHyFYkhbGm3PmSRSKdIZ/1F5VLxBc7imx8Nm/Sgyo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,10 +160,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1262528/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              319
+                              318
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1262528/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              319
+                              318
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
