updated at: 2023-04-25 22:57, メガネ - NICE DOG-Shop - BOOTH

--- a/VRChat/20/1262120.html
+++ b/VRChat/20/1262120.html
@@ -74,9 +74,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "e18q5sQs608Y6LHm25sNKGFuZ0W1tjd6H+Hyyh3QOZI="></script>
+    "78C0L7wdHnLCRd0bf5M8bqiiu8Dx+VzrVREeyoaZfiY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"メガネ","description":"【同梱ファイル】\nメガネ.fbx\nreadme.txt\n","url":"https://booth.pm/ja/items/1262120","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/a968361b-677c-4df2-bd21-ba86af47c168/i/1262120/e3b51927-189c-4986-b734-fca09739fab4_base_resized.jpg"}
     </script>
@@ -90,7 +90,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="e18q5sQs608Y6LHm25sNKGFuZ0W1tjd6H+Hyyh3QOZI="></script>
+    nonce="78C0L7wdHnLCRd0bf5M8bqiiu8Dx+VzrVREeyoaZfiY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -114,6 +114,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1262120/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               111
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1262120/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               111
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
