updated at: 2023-04-25 23:00, 【VRアバター向け】プチけもみみ娘「アイドルうさぎみみ娘」 - 運ばれうさぎ小屋 - BOOTH

--- a/VRChat/70/1260270.html
+++ b/VRChat/70/1260270.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "FHCM/gN8iwpz1Ese1wDzEiAXJWy3LYgD7wKrAcyFhzU="></script>
+    "mF4GLB8hwSXZo6RYyt+0VuPrLaXXOkRTghwMr5jX15k="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRアバター向け】プチけもみみ娘「アイドルうさぎみみ娘」","description":"デフォルメされた、けもみみ娘のアバターです。\n大きさは小さめです。\n\nこの娘を含んだ６体セットもあります。\nhttps://zouzu.booth.pm/items/1259778","url":"https://booth.pm/ja/items/1260270","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/eebc431e-9433-4f38-aaf9-669c8659dedf/i/1260270/0e51d878-97b0-47b0-ac8e-64e9985b9a34_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="FHCM/gN8iwpz1Ese1wDzEiAXJWy3LYgD7wKrAcyFhzU="></script>
+    nonce="mF4GLB8hwSXZo6RYyt+0VuPrLaXXOkRTghwMr5jX15k="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,7 +182,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1260270/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               23
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1260270/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               23
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
