updated at: 2023-04-25 23:02, 23_首輪 - ガーリャの100円ショップ - BOOTH

--- a/VRChat/21/1259121.html
+++ b/VRChat/21/1259121.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Bl93AY2claPo8L3O5dfFpsXm+CpUlAy8EYZARGnEI5Y="></script>
+    "lfKO4wOn8AUljBLwDHmBmHAkTiPB7K24MA90oiuw6Hw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"23_首輪","description":"オリジナル３Ｄモデルです。\n1120△\n\n画像はサンプルとなっており、マテリアル等は付属しておりません。\n\n■ファイル構成\n\n・readme\n・サンプル画像\n・モデルデータ .fbx\n・テクスチャ .png (albedo/normal/specular/UV)\n\n■■■■■■■■■■■■■■■■■■■■■■■■■\n\n利用規約\n\n・モデルデータ及び付属しているテクスチャの再配布を一切禁止します。\n\n・商用での使用に限りクレジット、或いは何処かに名前を明記してください。\n\n・データを利用したことによって生じるいかなる損害に対して当方は一切責任を負いません。\n\n■■■■■■■■■■■■■■■■■■■■■■■■■","url":"https://booth.pm/ja/items/1259121","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/3114deea-0188-440b-baa6-9f46de468b52/i/1259121/3a7f2a10-2fb5-405f-a70f-04d5d94041c0_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Bl93AY2claPo8L3O5dfFpsXm+CpUlAy8EYZARGnEI5Y="></script>
+    nonce="lfKO4wOn8AUljBLwDHmBmHAkTiPB7K24MA90oiuw6Hw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,7 +182,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1259121/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               90
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1259121/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               90
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
