updated at: 2023-04-25 23:03, 【3Dモデル】じんがい - 歯車平原 - BOOTH

--- a/VRChat/13/1258713.html
+++ b/VRChat/13/1258713.html
@@ -71,9 +71,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "1M4i+U6Qb+zpy/sqW0M9KjTFfvTnrlwWxeXQd02frO4="></script>
+    "25Q7O+Aq4yxwHO6zk878YkSPS3+glAWrqJ9pxRlGDt8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【3Dモデル】じんがい","description":"FREE","url":"https://booth.pm/ja/items/1258713","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/0def6edc-839b-4238-ac6f-f10503707425/i/1258713/b8173e0e-cb52-4f0a-9579-7d885257a13f_base_resized.jpg"}
     </script>
@@ -81,16 +81,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="1M4i+U6Qb+zpy/sqW0M9KjTFfvTnrlwWxeXQd02frO4="></script>
+    nonce="25Q7O+Aq4yxwHO6zk878YkSPS3+glAWrqJ9pxRlGDt8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -114,6 +111,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -128,7 +127,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -169,7 +169,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1258713/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               39
@@ -184,14 +184,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1258713/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               39
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
