updated at: 2023-04-25 23:04, たのしいパンダカー - おにさわランド公式オンラインストア - BOOTH

--- a/VRChat/94/1257694.html
+++ b/VRChat/94/1257694.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "369IVXpYUTCsKStoPlZ0mZ+7q8a1rGfHTTfz/chUaR8="></script>
+    "BEJfYM3YJ3JNUhs7NN7FPwwbVmrrwqy5ZjpJ2SV3W3s="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"たのしいパンダカー","description":"ワールドに設置するオブジェクトとして\nアバターとして\n\n様々な利用用途が見込めるパンダ型乗り物のモデルです\n\n商品写真撮影に協力頂いたなるかさんの\nアバター「Diaちゃん」はこちらで購入頂けます。\nhttps://narukaruka.booth.pm/","url":"https://booth.pm/ja/items/1257694","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/b0506462-fc0b-413c-a56a-992b92221fc5/i/1257694/3dd116b7-9198-4351-9f9e-2ae84eb806e0_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="369IVXpYUTCsKStoPlZ0mZ+7q8a1rGfHTTfz/chUaR8="></script>
+    nonce="BEJfYM3YJ3JNUhs7NN7FPwwbVmrrwqy5ZjpJ2SV3W3s="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1257694/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               231
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1257694/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               231
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
