updated at: 2023-04-25 23:05, LSWseries01-Megane - 海底工房 - BOOTH

--- a/VRChat/00/1236900.html
+++ b/VRChat/00/1236900.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "klfVRFe5j3zPRDalL4cbonWyi6qQuhsP5hqd9bjqAuc="></script>
+    "mdt4d3LLQWrAAdA2A7IypPRrmur4hzRiQ489S3Dh/P0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"LSWseries01-Megane","description":"アンダーリムの眼鏡です。\n\nポリゴン数:△556\n\nVRchat内で使用することを想定したモデルです。\nUnityPackage形式での配布となります。\n\n導入方法や利用規約は\n付属テキストを参考にしてください。\n\n\n改変　：　可\n再配布：不可\n\n製作者：Darksickle\n\n\n2019/03/03 配布開始","url":"https://booth.pm/ja/items/1236900","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/7bb99ec4-65bb-480c-b25f-6e30836c4855/i/1236900/266c46fd-1c43-43cd-88fa-37e6cfb674a0_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="klfVRFe5j3zPRDalL4cbonWyi6qQuhsP5hqd9bjqAuc="></script>
+    nonce="mdt4d3LLQWrAAdA2A7IypPRrmur4hzRiQ489S3Dh/P0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1236900/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               179
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1236900/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               179
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
